Paired question UX, full enum coverage for PartnerPreference, partner pref mapping from answers
- Restructure matrimonial questions into coupled pairs (aboutYou + partnerPref per step)
- Add PostQuestionPairVO; analyze response now returns List<PostQuestionPairVO>
- Add 8 new enums: Qualification, Profession, SmokingHabit, DrinkingHabit, FamilyType,
  FamilyValues, MarriageTimeline, RelationshipGoal
- Convert all String pref fields in PartnerPreference entity to typed enums with @Enumerated
- Add missing @Enumerated on Gender, MaritalStatus, Religion, Language, DietPreference
- Update PartnerPreferenceVO and PartnerPreferenceRequestVO to use enum types
- Build PartnerPreference from p* answers in submit() with display-string → enum mapping
- Remove m19 (want children); change p14/p15 to single_choice matching left-side options
- Fix enum comparisons in MatrimonialScorer and PostMatchingScheduler (== instead of equalsIgnoreCase)
- Increase Claude max_tokens to 4096 for larger question bank

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>